--- a/index.html
+++ b/index.html
@@ -32,35 +32,36 @@
             		     <li class="about_us_item">Колба является универсальной для всех типов кальянов, производимых на территории РФ</li>
             	   </ul>
             	</div>
-            	<div class="uk-width-1-2 uk-flex uk-flex-wrap uk-flex-wrap-around uk-background-muted second_container_up">
-                         <ul uk-slideshow class="uk-list slider">
-                               <li class="uk-slideshow-items  uk-flex uk-flex-wrap">
-                                  <div class="slide_img_box">
-                                     <img src="img/колба-1.png" alt="фото колбы Hookah Skills Clear" class="uk-img" width="446" height="576">
-                                   </div>
-                                   <div  class="slide_text_box">
-                                       <h2>Колба Hookah Skills Clear</h2>
-                                       <p>Наши колбы поставляются в индивидуальной фирменной коробке с ручкой, что приятно удивит 
-                                        и обрадует любого конечного покупателя</p>
-                                       <ul class=" uk-flex uk-flex-wrap uk-flex-wrap-between goods_categories_list">
-                                  	      <li class="goods_categories_item">
-                                  	         <span class="category_name">Высота:</span>
-                                  	         <span class="category_value">260мм</span>
-                                          </li>
-                                          <li class="goods_categories_item">
-                                  	         <span class="category_name">Внутренний диаметр:</span>
-                                  	         <span class="category_value">46 мм (+- 1 мм)</span>
-                                         </li>
-                                         <li class="goods_categories_item">
-                                  	         <span class="category_name">Внешний диаметр:</span>
-                                  	         <span class="category_value">70 мм (+- 2 мм)</span>
-                                          </li>
-                                      </ul>
-                                       <a href="#" class="uk-button-default button_order">Заказать прямо сейчас</a>
+            	<div class="second_container_up uk-width-1-2 uk-background-muted">
+                          <ul uk-slider class="slider uk-list">
+                               <li class="uk-slideshow-items">
+                                  <div class="uk-flex uk-flex-wrap">
+                                      <div class="slide_img_box">
+                                          <img src="img/колба-1.png" alt="фото колбы Hookah Skills Clear" class="uk-img" width="446" height="576">
+                                       </div>
+                                       <div  class="slide_text_box">
+                                             <h2>Колба Hookah Skills Clear</h2>
+                                             <p>Наши колбы поставляются в индивидуальной фирменной коробке с ручкой, что приятно удивит 
+                                              и обрадует любого конечного покупателя</p>
+                                             <ul class="goods_categories_list uk-flex uk-flex-wrap uk-flex-wrap-between">
+                                                 <li class="goods_categories_item">
+                                                    <span class="category_name">Высота:</span>
+                                                    <span class="category_value">260мм</span>
+                                                 </li>
+                                                 <li class="goods_categories_item">
+                                                     <span class="category_name">Внутренний диаметр:</span>
+                                                     <span class="category_value">46 мм (+- 1 мм)</span>
+                                                </li>
+                                                 <li class="goods_categories_item">
+                                                    <span class="category_name">Внешний диаметр:</span>
+                                                    <span class="category_value">70 мм (+- 2 мм)</span>
+                                                </li>
+                                            </ul>
+                                            <a href="#" class="uk-button-default button_order">Заказать прямо сейчас</a>
                                      <!--nav слайдара автоматически?-->
 
-                                   </div>
-
+                                        </div>
+                                     </div>
                                 </li>
                                <!-- <li>еще слайды</li>-->
                           </ul>
@@ -75,7 +76,7 @@
             	</ul>
             </div>
 	</main>
-	<footer class="uk-flex uk-flex-wrap uk-flex-wrap-around main_footer">
+	<footer class="main_footer uk-flex uk-flex-wrap uk-flex-wrap-around">
 		<span>®HookahSkills / Все права защищены (C) 2018</span>
 		<span>Создано — CreativeCult</span>
 	</footer>
