--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             	   </ul>
             	</div>
             	<div class="second_container_up uk-width-1-2 uk-background-muted">
-                          <ul uk-slider class="slider uk-list">
-                               <li class="uk-slideshow-items">
+                          <ul class="slider uk-list">
+                               <li class="">
                                   <div class="uk-flex uk-flex-wrap">
                                       <div class="slide_img_box">
                                           <img src="img/колба-1.png" alt="фото колбы Hookah Skills Clear" class="uk-img" width="446" height="576">
