--- a/index.html
+++ b/index.html
@@ -9,76 +9,72 @@
 	<script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
 	<script type="text/javascript" src="js/uikit.min.js"></script>
 </head>
-<body class="uk-width-1-1">
+<body>
 	<header class="index_header">
-		<nav class="uk-flex uk-flex-wrap uk-flex-wrap-between index_nav">
-			<a href="index.html" class="main_logo">
-              <h1 class="visually_hidden">Hookah Skills</h1>
-              <img src="img/logo.svg" alt="логотип магазина «Hookah Skills»" class="main_logo_img" uk-svg>
-            </a>
-            <ul class="uk-list uk-flex uk-flex-wrap-between nav_list">
-            	<li class="nav_item"><a href="#" class="uk-link-heading nav_link">Колба на кальянах</a></li>
-            	<li class="nav_item"><a href="#" class="uk-link-heading nav_link">г. Краснодар, ул. Дзержинского, 100</a></li> <!--приминить тег адресс?-->
-            	<li class="nav_item"><a href="tel:+79180000000" class="uk-link-heading  nav_link"> +7 918 000 00 00 </a></li>
-            </ul>
+		<nav class="index_nav uk-flex  uk-width-1-1">
+			<a href="index.html" class="main_logo uk-grid uk-width-1-4">
+         <h1 class="visually_hidden">Hookah Skills</h1>
+         <img src="img/logo.svg" alt="логотип магазина «Hookah Skills»" class="main_logo_img" uk-svg>
+      </a>
+      <ul class="nav_list uk-grid uk-width-expand@m">
+      	<li class="nav_item uk-grid uk-width-1-3"><a href="#" class="uk-link-heading nav_link">Колба на кальянах</a></li>
+      	<li class="nav_item uk-grid uk-width-1-3"><a href="#" class="uk-link-heading nav_link">г. Краснодар, ул. Дзержинского, 100</a></li>
+      	<li class="nav_item uk-grid uk-width-1-3"><a href="tel:+79180000000" class="uk-link-heading  nav_link"> +7 918 000 00 00 </a></li>
+      </ul>
 		</nav>
 	</header>
-	<main class="uk-flex uk-flex-wrap  index_main">
-            <div class="uk-flex uk-flex-wrap main_container_up">
-            	<div class="first_container_up  uk-width-1-4">
-            		<h2 class="about_us">Мы создаем. Качественные. Продукты. Для кальяна.</h2>
-            		<ul class="uk-list uk-list-bullet about_us_list">
-            		     <li class="about_us_item">Тщательно проработанная горловина колбы позволяет с легкостью продувать кальян и удалять из колбы остатки дыма и углекислого газа</li>
-            		     <li class="about_us_item">Колба является универсальной для всех типов кальянов, производимых на территории РФ</li>
-            	   </ul>
-            	</div>
-            	<div class="second_container_up uk-width-1-2 uk-background-muted">
-                          <ul class="slider uk-list">
-                               <li class="">
-                                  <div class="uk-flex uk-flex-wrap">
-                                      <div class="slide_img_box">
-                                          <img src="img/колба-1.png" alt="фото колбы Hookah Skills Clear" class="uk-img" width="446" height="576">
-                                       </div>
-                                       <div  class="slide_text_box">
-                                             <h2>Колба Hookah Skills Clear</h2>
-                                             <p>Наши колбы поставляются в индивидуальной фирменной коробке с ручкой, что приятно удивит 
-                                              и обрадует любого конечного покупателя</p>
-                                             <ul class="goods_categories_list uk-flex uk-flex-wrap uk-flex-wrap-between">
-                                                 <li class="goods_categories_item">
-                                                    <span class="category_name">Высота:</span>
-                                                    <span class="category_value">260мм</span>
-                                                 </li>
-                                                 <li class="goods_categories_item">
-                                                     <span class="category_name">Внутренний диаметр:</span>
-                                                     <span class="category_value">46 мм (+- 1 мм)</span>
-                                                </li>
-                                                 <li class="goods_categories_item">
-                                                    <span class="category_name">Внешний диаметр:</span>
-                                                    <span class="category_value">70 мм (+- 2 мм)</span>
-                                                </li>
-                                            </ul>
-                                            <a href="#" class="uk-button-default button_order">Заказать прямо сейчас</a>
-                                     <!--nav слайдара автоматически?-->
-
-                                        </div>
-                                     </div>
-                                </li>
+	<main class="index_main">
+    <div class="main_container_up uk-grid uk-width-1-1">
+      <div class="first_container_up uk-width-1-3">
+        <h2 class="about_us">Мы создаем. Качественные. Продукты. Для кальяна.</h2>
+          <ul class="about_us_list uk-list uk-list-bullet">
+            <li class="about_us_item">Тщательно проработанная горловина колбы позволяет с легкостью продувать кальян и удалять из колбы остатки дыма и углекислого газа</li>
+            <li class="about_us_item">Колба является универсальной для всех типов кальянов, производимых на территории РФ</li>
+           </ul>
+      </div>
+      <div uk-slideshow class="second_container_up uk-width-expand@m">
+        <ul class="uk-slideshow-items">
+            <li uk-grid>
+                <div class="slide_img_box uk-width-1-2">
+                    <img src="img/колба-1.png" alt="фото колбы Hookah Skills Clear" class="uk-img" width="446" height="576">
+                 </div>
+                 <div  class="slide_text_box uk-width-1-2 ">
+                       <h2 class="headline_slide">Колба Hookah Skills Clear</h2>
+                       <p>Наши колбы поставляются в индивидуальной фирменной коробке с ручкой, что приятно удивит 
+                        и обрадует любого конечного покупателя</p>
+                       <ul uk-grid class="goods_categories_list">
+                           <li class="goods_categories_item uk-width-1-3">
+                              <span class="category_name">Высота:</span>
+                              <span class="category_value">260мм</span>
+                           </li>
+                           <li class="goods_categories_item uk-width-1-3">
+                               <span class="category_name">Внутренний диаметр:</span>
+                               <span class="category_value">46 мм (+- 1 мм)</span>
+                          </li>
+                           <li class="goods_categories_item uk-width-1-3">
+                              <span class="category_name">Внешний диаметр:</span>
+                              <span class="category_value">70 мм (+- 2 мм)</span>
+                          </li>
+                       </ul>
+                       <a href="#" class="uk-button-default button_order">Заказать прямо сейчас</a>
+                  </div>
+               </div>
+            </li>
                                <!-- <li>еще слайды</li>-->
-                          </ul>
-                      </div>
-            </div>
-            <div class="main_container_down">
-             <ul class="uk-flex uk-flex-wrap-between uk-list advantages_list">
-            		<li class="advantages_item">Наши колбы производятся только на Российских заводах</li>            		
-            		<li class="advantages_item">Используем 100% органические материалы, любители кальяна не пострадают</li>            		
-            		<li class="advantages_item">Лучшие стеклодувы создают эту уникальную колбу вручную</li>            		
-            		<li class="advantages_item">Толщина стен колбы в 7мм придают ей особенную прочность и массивную устойчивость</li>
-            	</ul>
-            </div>
-	</main>
-	<footer class="main_footer uk-flex uk-flex-wrap uk-flex-wrap-around">
-		<span>®HookahSkills / Все права защищены (C) 2018</span>
-		<span>Создано — CreativeCult</span>
+           </ul>
+      </div>
+  </div>
+    <ul uk-grid class="advantages_list">
+    	<li class="advantages_item uk-width-1-4  uk-width-medium-1-2 uk-width-small-1-1">Наши колбы производятся только на Российских заводах</li>            		
+    	<li class="advantages_item uk-width-1-4  uk-width-medium-1-2 uk-width-small-1-1">Используем 100% органические материалы, любители кальяна не пострадают</li>            		
+    	<li class="advantages_item uk-width-1-4  uk-width-medium-1-2 uk-width-small-1-1">Лучшие стеклодувы создают эту уникальную колбу вручную</li>            		
+    	<li class="advantages_item uk-width-1-4  uk-width-medium-1-2 uk-width-small-1-1">Толщина стен колбы в 7мм придают ей особенную прочность и массивную устойчивость</li>
+    </ul>
+</main>
+
+	<footer uk-grid class="main_footer uk-width-1-1">
+		<span class="uk-width-small-1-2">®HookahSkills / Все права защищены (C) 2018</span>
+		<span class="uk-width-small-1-2">Создано — CreativeCult</span>
 	</footer>
 </body>
 </html>
